crates/aranya-policy-compiler/tests/data/type_errors/publish_non_command_struct_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: Struct T
  |
3 |     publish Foo {}
  |             ^^^^^^ expected `Command Struct T` but found `Struct T`
